force-app/main/default/objects/Asset_Repayment_Detail__x/Asset_Repayment_Detail__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AFAMBITRepayment</externalName>
    <label>Asset Repayment Detail</label>
    <pluralLabel>Asset Repayment Details</pluralLabel>
</CustomObject>