force-app/main/default/objects/Asset_Repayment_Detail__x/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Associated Id of contract</description>
    <externalDeveloperName>ContractId</externalDeveloperName>
    <label>Contract</label>
    <length>18</length>
    <referenceTo>Asset_Finance_AMBIT_Contract__x</referenceTo>
    <relationshipLabel>Repayments</relationshipLabel>
    <relationshipName>Asset_Repayment_Details</relationshipName>
    <type>ExternalLookup</type>
</CustomField>