force-app/main/default/objects/Asset_Repayment_Detail__x/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Frequency</description>
    <externalDeveloperName>Frequency</externalDeveloperName>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>