force-app/main/default/objects/Asset_Repayment_Detail__x/fields/Repayment_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Repayment Account Number</description>
    <externalDeveloperName>RepaymentAccountNumber</externalDeveloperName>
    <label>Repayment Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>