force-app/main/default/objects/Asset_Repayment_Detail__x/fields/Repayment_Type__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Repayment Type</description>
    <externalDeveloperName>RepaymentType</externalDeveloperName>
    <label>Repayment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>