force-app/main/default/objects/Asset_Repayment_Detail__x/fields/Total_Number_Of_Repayments__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Repayments__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Total  Number of  Repayments</description>
    <externalDeveloperName>TotalNumberOfRepayments</externalDeveloperName>
    <label>Number Of Repayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>